[gd_scene load_steps=4 format=3 uid="uid://bnp6e4lr24lq6"]

[ext_resource type="Script" uid="uid://rpjaipjcotw6" path="res://features/menu/play_menu/play_Menu.gd" id="1_akfxb"]
[ext_resource type="PackedScene" uid="uid://bm4fan7kwx1bw" path="res://features/menu/play_menu/PlayerSelection.tscn" id="2_2gje1"]
[ext_resource type="PackedScene" uid="uid://cow7stqauiefe" path="res://features/menu/play_menu/LevelSelection.tscn" id="3_wbled"]

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("VBoxContainer/HBoxContainer/LevelSelection")
focus_neighbor_top = NodePath("VBoxContainer/HBoxContainer/LevelSelection")
focus_neighbor_right = NodePath("VBoxContainer/HBoxContainer/LevelSelection")
focus_neighbor_bottom = NodePath("VBoxContainer/HBoxContainer/LevelSelection")
focus_next = NodePath("VBoxContainer/HBoxContainer/LevelSelection")
focus_previous = NodePath("VBoxContainer/HBoxContainer/LevelSelection")
script = ExtResource("1_akfxb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerSelection" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_2gje1")]
layout_mode = 2

[node name="LevelSelection" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_wbled")]
unique_name_in_owner = true
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../HBoxContainer/LevelSelection")
theme_override_font_sizes/font_size = 65
text = "Start"
